--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
     --main-font:'Open Sans', sans-serif;
     --second-font:'Roboto', sans-serif;
 
+    --top-hader-link-color:#dff5f1;
+    --top-header-bg-collor:#19bb9b;
+
+
     --site-nav-color:#1f1212;
     --logo-color:#605e5e;
     --link-hover-color:#1abc9c;
@@ -57,6 +61,144 @@ button{
 }
 
 .container{
+    max-width: 1110px;
     margin-right: auto;
     margin-left: auto;
+}
+
+
+/* header */
+
+.top-header{
+    background-color: var(--top-header-bg-collor);
+}
+
+.header .container{
+    display: flex;
+}
+
+
+.contacts{
+    display: flex;
+   margin-right: auto;
+}
+
+.contacts__link{
+    display: flex;
+    align-items: center;
+
+    font-family: var(--main-font);
+    font-weight: 300;
+    font-size: 14px;
+
+    color: var(--top-hader-link-color);
+    padding: 25px 15px;
+}
+
+.phone{
+    padding-left: 0;
+}
+
+.phone::before{
+    display: block;
+content: "";
+width: 20px;
+height: 21px;
+background-image: url(../img/icons/phone1.png);
+background-repeat: no-repeat;
+background-size: cover;
+margin-right: 10px;
+}
+
+.mail::before{
+display: block;
+content: "";
+width: 25px;
+height: 15px;
+background-image: url(../img/icons/mail.png);
+background-repeat: no-repeat;
+background-size: contain;
+margin-right: 10px;
+}
+
+.contacts__link:hover,
+.contacts__link:focus,
+.user-nav__link:hover,
+.user-nav__link:focus{
+    color: #fff;
+}
+/*  */
+
+.user-nav{
+    display: flex;
+    align-items: center;
+    
+}
+
+.user-nav__link{
+    display: block;
+
+    font-family: var(--main-font);
+    font-weight: 300;
+    font-size: 14px;
+    text-transform: capitalize;
+
+    color: var(--top-hader-link-color);
+    padding: 25px 15px;
+}
+
+/* bottom header */
+
+
+
+.logo{
+    margin-right: auto;
+
+    font-family: var(--second-font);
+    font-size: 30px;
+    font-weight: 300;
+    text-transform: uppercase;
+
+    color: var(--logo-color);
+}
+
+.logo::first-letter{
+    font-weight: 700;
+    color: var(--link-hover-color);
+}
+
+.site-nav{
+    display: flex;
+    align-items: center;
+}
+
+.site-nav__link{
+    display: block;
+    padding: 15px;
+
+    font-family: var(--main-font);
+    font-weight: 700;
+    font-size: 14px;
+    text-transform: uppercase;
+
+    color: var(--site-nav-color);
+}
+
+.site-nav__link:hover,
+.site-nav__link:focus{
+    color: var(--link-hover-color);
+}
+
+
+
+/*  */
+
+.hero{
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url(../img/banner/banner.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+   height: 600px;
 }
