eded new section

--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,9 @@ body{
 }
 
 img {
-    display: block;
+    /* display: block;
     width: 100px;
-    height: auto;
+    height: auto; */
   }
 
 h1,h2,h3,h4,h5,h6{
@@ -373,4 +373,104 @@ background-image: url(../img/icons/compass.png);
     line-height: 1.6;
 
     color: var(--news-title-color);
+}
+
+
+/*  New collection */
+
+.card-list{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    
+}
+
+.card-list__item{
+    position: relative;
+    flex-basis: calc(25%-40px);
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+
+.card-list__item:nth-child(4n){
+    margin-right: 0;
+}
+
+.card-list__item:nth-last-child(-n+4){
+    margin-bottom: 0;
+}
+
+.overlay{
+    position: relative;
+}
+
+.overlay::after{
+    display: block;
+    position: absolute;
+    content: "";
+    top: 10px;
+    left: 10px;
+    width: calc(100% - 20px);
+    height: calc(100% - 20px);
+    background-color: #000;
+    opacity: 0;
+
+    
+    transition: opacity 250ms linear;
+}
+
+.card-list__item:hover .overlay::after{
+    opacity: 0.5;
+}
+
+
+/* //////////////////////////// */
+
+.card-list__buttons{
+    display: flex;
+    flex-wrap: wrap;
+    position: absolute;
+
+    width: 165px;
+    top: 75px;
+    left: 45px;
+}
+
+
+.card-list__button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border: 1px #fff solid;
+}
+
+
+.card-list__button::before{
+display: block;
+content: "";
+background-position: center;
+background-size: contain;
+background-repeat: no-repeat;
+
+
+
+}
+
+.like{
+    width: 50px;
+    height: 50px;
+    
+
+    
+}
+
+.like::before{
+    background-image: url(../img/hover/like.png);
+    width: 25px;
+    height: 22px;
+}
+
+.settings{
+
 }
