--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
     --top-header-bg-collor:#19bb9b;
 
     --hero-text-color:#fffcfc;
+    
+    --new-collection-bg-color:#e9effd;
 
     --site-nav-color:#1f1212;
     --logo-color:#605e5e;
@@ -33,8 +35,8 @@ body{
 }
 
 img {
-    /* display: block;
-    width: 100px;
+    display: block;
+    /* width: 100px;
     height: auto; */
   }
 
@@ -378,6 +380,41 @@ background-image: url(../img/icons/compass.png);
 
 /*  New collection */
 
+.new-colection{
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-color: var(--new-collection-bg-color);
+}
+
+.main-title{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    font-family: var(--second-font);
+    font-weight: 900;
+    font-size: 48px;
+    text-transform: uppercase;
+
+    color: var(--main-title-color);
+    margin-bottom: 80px;
+
+}
+
+.main-title::after{
+    display: block;
+    content: "";
+    width: 165px;
+    height: 18px;
+    background-image: url(../img/lines/line.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+
+    margin-top: 30px;
+}
+
 .card-list{
     display: flex;
     flex-wrap: wrap;
@@ -428,12 +465,22 @@ background-image: url(../img/icons/compass.png);
 
 .card-list__buttons{
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
     position: absolute;
 
-    width: 165px;
+    /* width: 165px; */
     top: 75px;
-    left: 45px;
+    left: 40px;
+
+    opacity: 0;
+
+    transition: opacity 250ms linear;
+}
+
+.card-list__item:hover .card-list__buttons{
+    opacity: 1;
 }
 
 
@@ -442,7 +489,16 @@ background-image: url(../img/icons/compass.png);
     align-items: center;
     justify-content: center;
 
+    width: 50px;
+    height: 50px;
+    
     border: 1px #fff solid;
+    transition: background-color 250ms linear;
+}
+
+.card-list__button:hover,
+.card-list__button:focus{
+    background-color: var(--link-hover-color);
 }
 
 
@@ -457,13 +513,24 @@ background-repeat: no-repeat;
 
 }
 
-.like{
-    width: 50px;
-    height: 50px;
-    
-
-    
+.card-list__button:nth-child(1),
+.card-list__button:nth-child(2){
+    margin-right: 7px;
 }
+
+.card-list__button:nth-child(4){
+    margin-top: 7px;
+    width: 100%;
+}
+
+.card-list__button:nth-child(1),
+.card-list__button:nth-child(2),
+.card-list__button:nth-child(3)
+{
+    width: calc(33.33333%-5px);
+}
+
+
 
 .like::before{
     background-image: url(../img/hover/like.png);
@@ -471,6 +538,159 @@ background-repeat: no-repeat;
     height: 22px;
 }
 
-.settings{
-
+.settings::before{
+    background-image: url(../img/hover/review.png);
+    width: 25px;
+    height: 22px;
 }
+
+.time::before{
+    background-image: url(../img/hover/clock.png);
+    width: 25px;
+    height: 22px;
+}
+
+.bascket::before{
+    background-image: url(../img/hover//add-card.png);
+    width: 80%;
+    height: 80%;
+}
+
+
+/* // inform */
+
+.inform{
+    display: flex;
+    align-items: center;
+}
+
+.name{
+    display: flex;
+    align-items: center;
+    width: 80%;
+    height: 40px;
+
+    font-family: var(--second-font);
+    font-weight: 900;
+    font-size: 18px;
+    text-transform: uppercase;
+
+    color: #fff;
+    background-color: var(--name-bg-color);
+    
+    padding-left: 12px;
+    transition: all 250ms linear;
+}
+
+.price{
+    display: flex;
+    align-items: center;
+    width: 20%;
+    height: 40px;
+
+    font-family: var(--second-font);
+    font-weight: 900;
+    font-size: 18px;
+    text-transform: uppercase;
+
+    color: #fff;
+    background-color: var(--price-bg-color);
+    
+    padding-left: 12px; 
+    transition: all 250ms linear;
+}
+
+.card-list__item:hover .name{
+background-color: var(--name-hover-bg-color);
+}
+
+.card-list__item:hover .price{
+    background-color: var(--price-hover-bg-color);
+    }
+
+
+    /* featured products */
+
+    .featured-products{
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+
+    /* news */
+
+    .news{
+        padding-top: 110px;
+        padding-bottom: 50px;
+
+        background-color: var(--new-collection-bg-color);
+    }
+    
+    .news-list{
+        
+        display: flex;
+        align-items: center;
+        
+        margin-top: 80px;
+    }
+    
+    .news-list__item{
+        flex-basis: calc(33.333333%-20px);
+        margin-right: 30px;
+    }
+    
+    .news-list__item:last-child{
+       margin-right: 0;
+    }
+    
+    .news-list__title{
+        margin-top: 15px;
+        margin-bottom: 30px;
+    
+        font-family: var(--main-font);
+        font-weight: 600;
+        text-transform: capitalize;
+        font-size: 18px;
+    
+        color:var(--news-title-color) ;
+    
+        
+    }
+    
+    .news-list__description{
+        font-family: var(--main-font);
+        font-weight: 400;
+        text-transform: capitalize;
+        font-size: 14px;
+    
+        color: var(--news-title-color);
+    }
+    
+    .news-list__link{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    
+        height: 50px;
+        width: 160px;
+    
+        margin-top: 20px;
+    
+        color: #fff;
+    
+        font-family: var(--main-font);
+        font-weight: 300;
+        text-transform: uppercase;
+        font-size: 16px;
+    
+        background-color: #4ec6ab;
+        border-radius: 3px;
+    
+        transition: transform 250ms linear;
+    }
+    
+    
+    .news-list__link:hover{
+    transform: scale(1.1);
+    }
+    
