--- a/css/style.css
+++ b/css/style.css
@@ -174,8 +174,6 @@ margin-right: 10px;
     text-transform: uppercase;
 
     color: var(--logo-color);
-
-    
 }
 
 .logo::first-letter{
@@ -227,6 +225,12 @@ margin-right: 10px;
 
 .hero{
 text-align: center;
+
+animation-name: hero;
+animation-timing-function: linear;
+animation-fill-mode: backwards;
+animation-duration: 1000ms;
+
 }
 
 .hero__top-description{
@@ -261,7 +265,16 @@ text-align: center;
 .sale{
     font-weight: 700;
     color: var(--link-hover-color);
- 
+
+}
+
+.logo,
+.hero__link{
+    animation-name: logo-shadow;
+  animation-duration: 5000ms;
+  animation-fill-mode: backwards;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
 
 .hero__link{
@@ -287,7 +300,7 @@ text-align: center;
 
     transform: scale(1);
     transition: transform 250ms linear;
-    
+  
 }
 
 .hero__link:hover,
@@ -802,4 +815,29 @@ background-color: var(--name-hover-bg-color);
   .newslater__button:hover {
     background-color: var(--price-hover-color);
   }
+
+  @keyframes hero {
+    0%{
+        opacity: 0;
+        transform: scale(0.5);
+    }
+
+    100%{
+        opacity: 1;
+        transform: scale(1);
+    }
+  }
+
+  @keyframes logo-shadow {
+    0% {
+      box-shadow: 0 0 20px var(--link-hover-color);
+    }
   
+    50% {
+      box-shadow: 0 0 50px var(--link-hover-color);
+    }
+  
+    100% {
+      box-shadow: 0 0 20px var(--link-hover-color);
+    }
+  }
